# libc11

./: .gitignore  .travis.yml  CREDITS  Makefile.am  README.rst  TODO  configure.ac
doc/examples/exit42/: .gitignore  Makefile
doc/examples/hello/: .gitignore  Makefile  hello.c
doc/manual/: Makefile  conf.py  contrib.rst  faq.rst  glossary.rst  index.rst  install.rst  intro.rst  license.rst  notes.rst  status.rst
doc/manual/assert/: index.rst
doc/manual/complex/: index.rst
doc/manual/contrib/: bugs.rst  documentation.rst  donations.rst  patches.rst  style.rst
doc/manual/ctype/: index.rst  isalnum.rst  isalpha.rst  isascii.rst  isblank.rst  iscntrl.rst  isdigit.rst  isgraph.rst  islower.rst  isprint.rst  ispunct.rst  isspace.rst  isupper.rst  isxdigit.rst  tolower.rst  toupper.rst
doc/manual/errno/: index.rst
doc/manual/fenv/: index.rst
doc/manual/float/: index.rst
doc/manual/inttypes/: index.rst
doc/manual/iso646/: index.rst
doc/manual/limits/: index.rst
doc/manual/locale/: index.rst
doc/manual/math/: index.rst
doc/manual/setjmp/: index.rst
doc/manual/signal/: index.rst
doc/manual/stdalign/: index.rst
doc/manual/stdarg/: index.rst
doc/manual/stdatomic/: index.rst
doc/manual/stdbool/: index.rst
doc/manual/stddef/: index.rst
doc/manual/stdint/: index.rst
doc/manual/stdio/: index.rst  snprintf.rst  sprintf.rst  vsnprintf.rst  vsprintf.rst
doc/manual/stdlib/: _Exit.rst  abort.rst  abs.rst  exit.rst  index.rst  labs.rst  llabs.rst  quick_exit.rst
doc/manual/stdnoreturn/: index.rst
doc/manual/string/: index.rst  memchr.rst  memcmp.rst  memcpy.rst  memmove.rst  memset.rst  strcmp.rst  strlen.rst  strncmp.rst  strnlen.rst
doc/manual/tgmath/: index.rst
doc/manual/threads/: index.rst
doc/manual/time/: index.rst
doc/manual/uchar/: index.rst
doc/manual/wchar/: index.rst
doc/manual/wctype/: index.rst
etc/: .gitignore  doap.rdf
etc/aclocal/: ab_check_builtin.m4  ax_compiler_vendor.m4
etc/buildbot/master/: .gitignore  buildbot.tac  crontab  master.cfg
etc/buildbot/master/nginx/: build.libc11.org
etc/buildbot/slaves/.template/: buildbot.tac
etc/buildbot/slaves/freebsd-10.1-x86_64/: buildbot.tac  crontab
etc/buildbot/slaves/freebsd-10.1-x86_64/info/: access_uri  host
etc/buildbot/slaves/netbsd-6.1.5-x86_64/: crontab
etc/buildbot/slaves/netbsd-6.1.5-x86_64/info/: access_uri  host
etc/buildbot/slaves/openbsd-5.6-x86_64/: .gitignore  crontab
etc/buildbot/slaves/openbsd-5.6-x86_64/info/: access_uri  host
etc/buildbot/slaves/osx-10.7.5-x86_64/: crontab
etc/buildbot/slaves/osx-10.7.5-x86_64/info/: access_uri  host
etc/buildbot/slaves/solaris-11.2-x86_64/: crontab
etc/buildbot/slaves/solaris-11.2-x86_64/info/: access_uri  host
etc/buildbot/slaves/ubuntu-14.04-armhf/: crontab
etc/buildbot/slaves/ubuntu-14.04-armhf/info/: access_uri  host
etc/buildbot/slaves/ubuntu-14.04-x86_64/: crontab
etc/buildbot/slaves/ubuntu-14.04-x86_64/info/: access_uri  host
etc/coverity/: model.c
etc/examples/hello/: Makefile  hello.c
etc/rdf/: .gitignore  assert.ttl  ctype.ttl  limits.ttl  schema.ttl  stdalign.ttl  stdarg.ttl  stdbool.ttl  stddef.ttl  stdio.ttl  stdlib.ttl  stdnoreturn.ttl  string.ttl
src/: .gitignore  Makefile.am
src/ctype/: Makefile.am  isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/errno/: Makefile.am  errno.c
src/include/: Makefile.am  assert.h  ctype.h  endian.h  errno.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  signal.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  unistd.h
src/locale/: Makefile.am  localeconv.c  setlocale.c
src/math/: Makefile.am  abs.c  acos.c  asin.c  atan.c  atan2.c  cos.c  exp.c  fabs  fabs.c  fmod.c  labs.c  ldexp.c  llabs.c  pow.c  sin.c  sqrt.c  sqrtf.c  tan.c
src/stdio/: Makefile.am  clearerr.c  fclose.c  feof.c  ferror.c  fflush.c  fgetc.c  fputc.c  fputs.c  getc.c  getchar.c  putc.c  putchar.c  puts.c  snprintf.c  sprintf.c  vsnprintf.c  vsprintf.c
src/stdlib/: Makefile.am  _Exit.c  abort.c  abs.c  exit.c  labs.c  llabs.c  quick_exit.c
src/string/: Makefile.am  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strxfrm.c
sys/: .gitignore  Makefile.am  syscall.h  sysio.h
sys/bsd/x86_64/: __sys_exit.S  __sys_write.S  crt0.S
sys/darwin/x86_64/: Makefile.am  __sys_exit.S  __sys_write.S  crt0.S
sys/linux/: Makefile.am
sys/linux/arm/: __sys_exit.S  __sys_write.S
sys/linux/x86/: Makefile.am  crt0.S
sys/linux/x86_64/: __sys_exit.S  __sys_write.S  crt0.S
sys/none/: __sys_exit.c  crt0.c
sys/posix/: Makefile.am  __sysio_close.c  __sysio_errno.c  __sysio_write.c  stderr.c  stdin.c  stdio_file.h  stdout.c  sysio_file.h
sys/posix/bsd/: Makefile.am
sys/posix/bsd/x86_64/: __sys_close.S  __sys_write.S  crt0.S
sys/posix/darwin/x86_64/: __sys_close.S  __sys_exit.S  __sys_write.S
sys/posix/linux/arm/: __sys_close.S  crt0.S
sys/posix/linux/x86/: __sys_close.S  __sys_exit.S  __sys_write.S
sys/posix/linux/x86_64/: Makefile.am  __sys_close.S  __sys_exit.S
sys/posix/none/: Makefile.am  __sys_close.c  __sys_write.c
sys/windows/: Makefile.am
test/: .gitignore  Makefile.am
test/ctype/: .gitignore  Makefile.am  check-isupper.c
test/errno/: .gitignore  Makefile.am  check-errno.c
test/float/: .gitignore  Makefile.am  check-macros.c
test/stdio/: .gitignore  Makefile.am  check-macros.c  check-vsnprintf.c
test/stdlib/: .gitignore  Makefile.am  check-macros.c
test/string/: .gitignore  Makefile.am  check-memcmp.c  check-strlen.c  check-strnlen.c
