SUBDIRS = include

SUBDIRS += assert

SUBDIRS += complex

SUBDIRS += ctype

SUBDIRS += errno

SUBDIRS += fenv

SUBDIRS += inttypes

SUBDIRS += locale

SUBDIRS += math

SUBDIRS += setjmp

SUBDIRS += signal

SUBDIRS += stdarg

SUBDIRS += stdio

SUBDIRS += stdlib

SUBDIRS += string

SUBDIRS += threads

SUBDIRS += time

SUBDIRS += uchar
