include_HEADERS = \
  assert.h        \
  ctype.h         \
  errno.h         \
  inttypes.h      \
  iso646.h        \
  limits.h        \
  locale.h        \
  signal.h        \
  stdalign.h      \
  stdarg.h        \
  stdatomic.h     \
  stdbool.h       \
  stddef.h        \
  stdint.h        \
  stdio.h         \
  stdlib.h        \
  stdnoreturn.h   \
  string.h
