include_HEADERS =

include_HEADERS += assert.h

if !DISABLE_CTYPE
  include_HEADERS += ctype.h
endif

include_HEADERS += errno.h

if !DISABLE_FLOAT
  include_HEADERS += float.h
endif

if !DISABLE_INTTYPES
  include_HEADERS += inttypes.h
endif

include_HEADERS += iso646.h

include_HEADERS += limits.h

if !DISABLE_LOCALE
  include_HEADERS += locale.h
endif

if !DISABLE_SIGNAL
  include_HEADERS += signal.h
endif

include_HEADERS += stdalign.h

include_HEADERS += stdarg.h

include_HEADERS += stdatomic.h

include_HEADERS += stdbool.h

include_HEADERS += stddef.h

include_HEADERS += stdint.h

if !DISABLE_STDIO
  include_HEADERS += stdio.h
endif

include_HEADERS += stdlib.h

include_HEADERS += stdnoreturn.h

include_HEADERS += string.h
