noinst_LTLIBRARIES = libcmath.la

libcmath_la_SOURCES = \
  fabs.c              \
  fmod.c              \
  ldexp.c             \
  pow.c               \
  sqrt.c              \
  sqrtf.c             \
  sin.c               \
  cos.c               \
  tan.c               \
  asin.c              \
  acos.c              \
  atan.c              \
  atan2.c
