noinst_LTLIBRARIES = libcstdio.la

libcstdio_la_SOURCES = \
  clearerr.c           \
  ferror.c             \
  fputc.c              \
  fputs.c              \
  putc.c               \
  putchar.c            \
  puts.c               \
  snprintf.c           \
  sprintf.c            \
  vsnprintf.c          \
  vsprintf.c
