noinst_LTLIBRARIES = libcstdio.la

libcstdio_la_SOURCES = \
  clearerr.c           \
  fclose.c             \
  feof.c               \
  ferror.c             \
  fflush.c             \
  fgetc.c              \
  fputc.c              \
  fputs.c              \
  getc.c               \
  getchar.c            \
  putc.c               \
  putchar.c            \
  puts.c               \
  snprintf.c           \
  sprintf.c            \
  vsnprintf.c          \
  vsprintf.c
