AM_CPPFLAGS += -I$(top_srcdir)/src -I$(top_srcdir)/src/include

noinst_LTLIBRARIES = libcstring.la

libcstring_la_SOURCES = \
  memchr.c              \
  memcmp.c              \
  memcpy.c              \
  memmove.c             \
  memset.c              \
  strcmp.c              \
  strlen.c              \
  strncmp.c             \
  strnlen.c
