noinst_LTLIBRARIES = libcstring.la

libcstring_la_SOURCES = \
  memchr.c              \
  memcmp.c              \
  memcpy.c              \
  memmove.c             \
  memset.c              \
  strcat.c              \
  strchr.c              \
  strcmp.c              \
  strcoll.c             \
  strcpy.c              \
  strcspn.c             \
  strerror.c            \
  strlen.c              \
  strncat.c             \
  strncmp.c             \
  strncpy.c             \
  strnlen.c             \
  strpbrk.c             \
  strrchr.c             \
  strspn.c              \
  strstr.c              \
  strtok.c              \
  strxfrm.c
